Fix spacing and add placeholder in reference field (#2274)

--- a/src/stylesheets/Components/filter-pill.styl
+++ b/src/stylesheets/Components/filter-pill.styl
@@ -127,6 +127,13 @@
     padding: 0 10px 0 3ch
     color: transparent
 
+.search__input-reference
+  padding-right: 5px
+  padding-left: 12px
+  cursor: pointer
+  &::placeholder
+    color: rgba($colors.white, 0.3)
+
 .search__input
   position: absolute
   left: 0
